--- a/index.html
+++ b/index.html
@@ -7,27 +7,40 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="calculator">
-    <h1 class="name" style="color: orange;">Calculator</h1>
-    <input id="display" value="0" readonly>
-    <div id="keys">
-      <button onclick="appendToDisplay('7')">7</button>
-      <button onclick="appendToDisplay('8')">8</button>
-      <button onclick="appendToDisplay('9')">9</button>
-      <button onclick="appendToDisplay('/')">/</button>
-      <button onclick="appendToDisplay('4')">4</button>
-      <button onclick="appendToDisplay('5')">5</button>
-      <button onclick="appendToDisplay('6')">6</button>
-      <button onclick="appendToDisplay('*')">*</button>
-      <button onclick="appendToDisplay('1')">1</button>
-      <button onclick="appendToDisplay('2')">2</button>
-      <button onclick="appendToDisplay('3')">3</button>
-      <button onclick="appendToDisplay('-')">-</button>
-      <button onclick="appendToDisplay('0')">0</button>
-      <button onclick="appendToDisplay('.')">.</button>
-      <button onclick="appendToDisplay('+')">+</button>
-      <button onclick="calculate()">=</button>
-      
+  <div class="cal">
+    <div id="calculator">
+      <h1 class="name" style="color: orange;">Calculator</h1>
+      <input id="display" value="0" readonly>
+      <div id="keys">
+        <button onclick="appendToDisplay('7')">7</button>
+        <button onclick="appendToDisplay('8')">8</button>
+        <button onclick="appendToDisplay('9')">9</button>
+        <button onclick="appendToDisplay('/')">/</button>
+        <button onclick="appendToDisplay('4')">4</button>
+        <button onclick="appendToDisplay('5')">5</button>
+        <button onclick="appendToDisplay('6')">6</button>
+        <button onclick="appendToDisplay('*')">*</button>
+        <button onclick="appendToDisplay('1')">1</button>
+        <button onclick="appendToDisplay('2')">2</button>
+        <button onclick="appendToDisplay('3')">3</button>
+        <button onclick="appendToDisplay('-')">-</button>
+        <button onclick="appendToDisplay('0')">0</button>
+        <button onclick="appendToDisplay('.')">.</button>
+        <button onclick="appendToDisplay('+')">+</button>
+        <button onclick="calculate()">=</button>
+        
+      </div>
+  
+  
+    </div>
+    <div class="creator-info">
+      <p class="jolil">Created by <strong>Kamrul Hassan</strong></p>
+    <p class="jolil">Email:<a href="mailto:kamrulhassan1250@gmail.com">kamrulhassan1250@gmail.com</a></p>
+    <p class="jolil">
+      Connect:
+      <a href="https://www.linkedin.com/in/kamrul-hassan-799254368/" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/kamrul1250" target="_blank">GitHub</a>
+    </p>
     </div>
   </div>
   <script src="index.js"></script>
